--- a/slides/13-glmm/glmm.html
+++ b/slides/13-glmm/glmm.html
@@ -415,7 +415,7 @@ summary {
 <h2>Generalized linear mixed models (GLMM)</h2>
 <ul>
 <li><p>So far we studied linear mixed models (LMM), where the responses are continuous and normally distributed. It is natural to extend LMM to handle nonnormally distributed responses.</p></li>
-<li><p>Recall that, in GLM, the distribution of <span class="math inline">\(Y_i\)</span> is from the exponential familty of distributions of form <span class="math display">\[
+<li><p>Recall that, in GLM, the distribution of <span class="math inline">\(Y_i\)</span> is from the exponential family of distributions of form <span class="math display">\[
 f(y_i \mid \theta_i, \phi) = \exp \left[ \frac{y \theta_i - b(\theta_i)}{a(\phi)} + c(y_i, \phi) \right].
 \]</span> If we use the <strong>canonical link</strong>, then <span class="math display">\[
 \theta_i = g(\mu_i) = \eta_i,
