hw4 deadline postponed to 5/31

--- a/hw/hw4/hw4.html
+++ b/hw/hw4/hw4.html
@@ -362,7 +362,7 @@ summary {
 
 
 <h1 class="title toc-ignore">Biostat 200C Homework 4</h1>
-<h3 class="subtitle">Due May 29 @ 11:59PM</h3>
+<h3 class="subtitle">Due <del>May 29</del> May 31 @ 11:59PM</h3>
 
 </div>
 
@@ -402,7 +402,7 @@ y_{ij} = \mu + \alpha_i + \epsilon_{ij}, \quad i=1,\ldots,a, \quad j=1,\ldots,n.
 \widehat{\sigma}_{\alpha}^2 &amp;=&amp; \frac{\text{SSA}/(a-1) - \widehat{\sigma}_{\epsilon}^2}{n}.
 \end{eqnarray*}\]</span></p></li>
 <li><p>Derive the MLE estimate for <span class="math inline">\(\mu\)</span>, <span class="math inline">\(\sigma_\alpha^2\)</span>, and <span class="math inline">\(\sigma_{\epsilon}^2\)</span>. Hint: write down the log-likelihood and find the maximizer.</p></li>
-<li><p>Derive the REML estimate for <span class="math inline">\(\mu\)</span>, <span class="math inline">\(\sigma_\alpha^2\)</span>, and <span class="math inline">\(\sigma_{\epsilon}^2\)</span>.</p></li>
+<li><p>(<strong>Optional</strong>) Derive the REML estimate for <span class="math inline">\(\mu\)</span>, <span class="math inline">\(\sigma_\alpha^2\)</span>, and <span class="math inline">\(\sigma_{\epsilon}^2\)</span>.</p></li>
 <li><p>For all three estimates, check that your results match those we obtained using R for the <code>pulp</code> example in class.</p></li>
 </ol>
 </div>
