--- a/slides/15-gam/gam.html
+++ b/slides/15-gam/gam.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Dr. Hua Zhou @ UCLA" />
 
-<meta name="date" content="2020-05-28" />
+<meta name="date" content="2020-06-04" />
 
 <title>Generalized Additive Model (ELMR Chapter 15)</title>
 
@@ -366,7 +366,7 @@ summary {
 <h1 class="title toc-ignore">Generalized Additive Model (ELMR Chapter 15)</h1>
 <h3 class="subtitle">Biostat 200C</h3>
 <h4 class="author">Dr. Hua Zhou @ UCLA</h4>
-<h4 class="date">May 28, 2020</h4>
+<h4 class="date">June 4, 2020</h4>
 
 </div>
 
@@ -377,7 +377,7 @@ summary {
 <li><a href="#generalized-additive-model">Generalized additive model</a></li>
 </ul></li>
 <li><a href="#generalized-additive-mixed-model-gamm">Generalized additive mixed model (GAMM)</a></li>
-<li><a href="#multivariate-adaptive-regression-splines-mars">Multivariate adaptive regression splines (MARS)</a></li>
+<li><a href="#multivariate-adaptive-regression-splines-mars-not-covered-in-this-course">Multivariate adaptive regression splines (MARS) (<strong>not covered in this course</strong>)</a></li>
 </ul>
 </div>
 
@@ -403,12 +403,12 @@ summary {
 ##  [9] knitr_1.28      stringr_1.4.0   xfun_0.13       digest_0.6.25  
 ## [13] rlang_0.4.5     evaluate_0.14</code></pre>
 <pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ─────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
+<pre><code>## ── Attaching packages ─────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
 <pre><code>## ✓ ggplot2 3.3.0     ✓ purrr   0.3.4
 ## ✓ tibble  3.0.0     ✓ dplyr   0.8.5
 ## ✓ tidyr   1.0.2     ✓ stringr 1.4.0
 ## ✓ readr   1.3.1     ✓ forcats 0.5.0</code></pre>
-<pre><code>## ── Conflicts ────────────────────────────────────────────────────────── tidyverse_conflicts() ──
+<pre><code>## ── Conflicts ────────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
 <pre class="r"><code>library(faraway)</code></pre>
@@ -746,8 +746,8 @@ summary(gammgcv)</code></pre>
 ## R-sq.(adj) =  0.324   
 ##   Scale est. = 1         n = 290</code></pre>
 </div>
-<div id="multivariate-adaptive-regression-splines-mars" class="section level2">
-<h2>Multivariate adaptive regression splines (MARS)</h2>
+<div id="multivariate-adaptive-regression-splines-mars-not-covered-in-this-course" class="section level2">
+<h2>Multivariate adaptive regression splines (MARS) (<strong>not covered in this course</strong>)</h2>
 <ul>
 <li><p>MARS fits data by model <span class="math display">\[
 \hat f(x) = \sum_{j=1}^k c_j B_j(x),
