explain + for censoring

--- a/slides/final/200c_final.html
+++ b/slides/final/200c_final.html
@@ -379,7 +379,7 @@ summary {
 <p>This is an open book test. Helping or asking help from others is considered plagarism. To sumbit, please email Rmd and html files to Shanpeng Li <a href="mailto:lishanpeng0913@ucla.edu" class="email">lishanpeng0913@ucla.edu</a> by June 9, 2020 @ 11:59PM. <strong>Submission received after 2020-06-09 11:59pm will be considered invalid.</strong> If you prefer to write on paper, then take clear photos of your writing and email them to Shanpeng Li.</p>
 <div id="q1.-25-pts-survival-data-analysis" class="section level2">
 <h2>Q1. (25 pts) Survival data analysis</h2>
-<p>Consider following survival times of 25 patients with no history of chronic diesease (<code>chr = 0</code>) and 25 patients with history of chronic disease (<code>chr = 1</code>).</p>
+<p>Consider following survival times of 25 patients with no history of chronic diesease (<code>chr = 0</code>) and 25 patients with history of chronic disease (<code>chr = 1</code>). + indicates a right-censored time.</p>
 <p>Group 1 (<code>chr=0</code>): 12.3+, 5.4, 8.2, 12.2+, 11.7, 10.0, 5.7, 9.8, 2.6, 11.0, 9.2, 12.1+, 6.6, 2.2, 1.8, 10.2, 10.7, 11.1, 5.3, 3.5, 9.2, 2.5, 8.7, 3.8, 3.0.</p>
 <p>Group 2 (<code>chr=1</code>): 5.8, 2.9, 8.4, 8.3, 9.1, 4.2, 4.1, 1.8, 3.1, 11.4, 2.4, 1.4, 5.9, 1.6, 2.8, 4.9, 3.5, 6.5, 9.9, 3.6, 5.2, 8.8, 7.8, 4.7, 3.9.</p>
 <ol style="list-style-type: decimal">
